@@ -268,14 +268,14 @@ async def on_reaction_add(reaction, user):
 async def on_voice_state_update(before, after):
 	if before.id in serverconfig[before.server.id]["watched_users"] and serverconfig[before.server.id]["extra_options"]["voice_logging"]: 
 		if not before.voice.voice_channel: #joining
-			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"{before.mention} joined `{after.voice.voice_channel.name}`", color=0xf4df42)
+			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"\N{SPEAKER}\N{INBOX TRAY}{before.mention} joined `{after.voice.voice_channel.name}`", color=0xff66ff)
 			await client.send_message(client.get_channel(serverconfig[before.server.id]["log_channel"]), embed=embed)
 		if before.voice.voice_channel and after.voice.voice_channel: #changing channels (like on TV but much more exciting)
-			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"{before.mention} moved from `{before.voice.voice_channel.name}` to `{after.voice.voice_channel.name}`", color=0xf4df42)
+			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"\N{SPEAKER}\N{TWISTED RIGHTWARDS ARROWS}{before.mention} moved from `{before.voice.voice_channel.name}` to `{after.voice.voice_channel.name}`", color=0xff66ff)
 			await client.send_message(client.get_channel(serverconfig[before.server.id]["log_channel"]), embed=embed)
 		
 		elif before.voice.voice_channel: #leaving
-			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"{before.mention} left `{before.voice.voice_channel.name}`", color=0xf4df42)
+			embed = embed_gen(title=f"Voice State Change", author=before, footer_author=True, footer_author_id=True, desc=f"\N{SPEAKER}\N{OUTBOX TRAY}{before.mention} left `{before.voice.voice_channel.name}`", color=0xff66ff)
 			await client.send_message(client.get_channel(serverconfig[before.server.id]["log_channel"]), embed=embed)
 
 
@@ -514,7 +514,7 @@ async def cmd_uinfo(message):
 		embed.add_field(name=entry, value=fields[entry])
 	await client.send_message(message.channel, embed=embed)
 		
-@commands.register("sinfo", help="Find information about the soerver the command is run in.")
+@commands.register("sinfo", help="Find information about the server the command is run in.")
 async def cmd_sinfo(message):
 	server = message.server
 	embd = embed_gen(desc=f"**Name:** {server.name}\n**Region:** {server.region}\n**Member Count:** {server.member_count}\n**Owner:** {server.owner.name}#{server.owner.discriminator}", type="info")
